--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@babel/preset-env": "^7.13.12",
     "babel-jest": "^26.6.3",
     "eslint": "^7.23.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.23.1",
     "jest": "^26.6.3"
   },
